[gd_scene load_steps=10 format=4 uid="uid://bp35b1kedlvlc"]

[ext_resource type="Script" path="res://BattleScene/battle_scene.gd" id="1_817kq"]
[ext_resource type="PackedScene" uid="uid://cluviy54xbvar" path="res://Map/background_2.tscn" id="2_3qvqo"]
[ext_resource type="Texture2D" uid="uid://wuofuc7rffl" path="res://Assets/Tile/oak_woods_tileset.png" id="3_jxkkk"]
[ext_resource type="PackedScene" uid="uid://b2exfw02j0mfr" path="res://Dialogue/BattlePlayer/battle_player.tscn" id="5_0ktgf"]
[ext_resource type="PackedScene" uid="uid://d0lc8le4kygxx" path="res://Core/state_machine.tscn" id="5_4vifh"]
[ext_resource type="PackedScene" uid="uid://cqg4jv66chowu" path="res://Dialogue/BattleEnemy/battle_enemy.tscn" id="6_70u4w"]
[ext_resource type="PackedScene" uid="uid://x5sny1eal37a" path="res://UI/Input/compute_input.tscn" id="6_veeoo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gju48"]
texture = ExtResource("3_jxkkk")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/terrain = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0/terrains_peering_bit/top_right_corner = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0/terrains_peering_bit/top_left_corner = 0
1:5/0/terrains_peering_bit/top_right_corner = 0
5:5/0 = 0
5:5/0/terrain_set = 0
5:5/0/terrain = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0/terrains_peering_bit/top_left_corner = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0/terrains_peering_bit/bottom_left_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0/terrains_peering_bit/top_left_corner = 0

[sub_resource type="TileSet" id="TileSet_m5l5b"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
terrain_set_0/mode = 1
terrain_set_0/terrain_0/name = "地面"
terrain_set_0/terrain_0/color = Color(2.16588e-07, 0.460245, 0.275195, 1)
sources/1 = SubResource("TileSetAtlasSource_gju48")

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_817kq")

[node name="Background2" parent="." instance=ExtResource("2_3qvqo")]

[node name="TileMap2" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAApAAoAAQABAAUAAAApAAkAAQABAAAAAAAoAAoAAQABAAUAAAAoAAkAAQABAAAAAAAnAAoAAQABAAUAAAAnAAkAAQABAAAAAAAmAAoAAQABAAUAAAAmAAkAAQABAAAAAAAlAAoAAQABAAUAAAAlAAkAAQABAAAAAAAkAAoAAQABAAUAAAAkAAkAAQABAAAAAAAjAAoAAQABAAUAAAAjAAkAAQABAAAAAAAiAAoAAQABAAUAAAAiAAkAAQABAAAAAAAhAAoAAQABAAUAAAAhAAkAAQABAAAAAAAgAAoAAQABAAUAAAAgAAkAAQABAAAAAAAfAAoAAQABAAUAAAAfAAkAAQABAAAAAAAeAAoAAQABAAUAAAAeAAkAAQABAAAAAAAdAAoAAQABAAUAAAAdAAkAAQABAAAAAAAcAAoAAQABAAUAAAAcAAkAAQABAAAAAAAbAAoAAQABAAUAAAAbAAkAAQABAAAAAAAaAAoAAQABAAUAAAAaAAkAAQABAAAAAAAZAAoAAQABAAUAAAAZAAkAAQABAAAAAAAYAAoAAQABAAUAAAAYAAkAAQABAAAAAAAXAAoAAQABAAUAAAAXAAkAAQABAAAAAAAWAAoAAQABAAUAAAAWAAkAAQABAAAAAAAVAAoAAQABAAUAAAAVAAkAAQABAAAAAAAUAAoAAQABAAUAAAAUAAkAAQABAAAAAAATAAoAAQABAAUAAAATAAkAAQABAAAAAAASAAoAAQABAAUAAAASAAkAAQABAAAAAAARAAoAAQABAAUAAAARAAkAAQABAAAAAAAQAAoAAQABAAUAAAAQAAkAAQABAAAAAAAPAAoAAQABAAUAAAAPAAkAAQABAAAAAAAOAAoAAQABAAUAAAAOAAkAAQABAAAAAAANAAoAAQABAAUAAAANAAkAAQABAAAAAAAMAAoAAQABAAUAAAAMAAkAAQABAAAAAAALAAoAAQABAAUAAAALAAkAAQABAAAAAAAKAAoAAQABAAUAAAAKAAkAAQABAAAAAAAJAAoAAQABAAUAAAAJAAkAAQABAAAAAAAIAAoAAQABAAUAAAAIAAkAAQABAAAAAAAHAAoAAQABAAUAAAAHAAkAAQABAAAAAAAGAAoAAQABAAUAAAAGAAkAAQABAAAAAAAFAAoAAQABAAUAAAAFAAkAAQABAAAAAAAEAAoAAQABAAUAAAAEAAkAAQABAAAAAAADAAoAAQABAAUAAAADAAkAAQABAAAAAAACAAoAAQABAAUAAAACAAkAAQABAAAAAAABAAoAAQABAAUAAAABAAkAAQABAAAAAAAAAAoAAQABAAUAAAAAAAkAAQABAAAAAAD//woAAQABAAUAAAD//wkAAQABAAAAAAD+/woAAQABAAUAAAD+/wkAAQABAAAAAAD9/woAAQABAAUAAAD9/wkAAQABAAAAAAD8/woAAQABAAUAAAD8/wkAAQABAAAAAAD7/woAAQABAAUAAAD7/wkAAQABAAAAAAD6/woAAQABAAUAAAD6/wkAAQABAAAAAAD5/woAAQABAAUAAAD5/wkAAQABAAAAAAD4/woAAQABAAUAAAD4/wkAAQABAAAAAAD3/woAAQABAAUAAAD3/wkAAQABAAAAAAD2/woAAQABAAUAAAD2/wkAAQABAAAAAAD1/woAAQABAAUAAAD1/wkAAQABAAAAAAD0/woAAQABAAUAAAD0/wkAAQABAAAAAADz/woAAQABAAUAAADz/wkAAQABAAEAAADz/wgAAQABAAEAAADz/wcAAQABAAEAAADz/wYAAQABAAEAAADz/wUAAQABAAEAAADz/wQAAQABAAEAAADz/wMAAQABAAEAAADz/wIAAQABAAEAAADz/wEAAQABAAEAAADz/wAAAQABAAAAAADy/woAAQAAAAUAAADy/wkAAQAAAAEAAADy/wgAAQAAAAEAAADy/wcAAQAAAAEAAADy/wYAAQAAAAEAAADy/wUAAQAAAAEAAADy/wQAAQAAAAEAAADy/wMAAQAAAAEAAADy/wIAAQAAAAEAAADy/wEAAQAAAAEAAADy/wAAAQAAAAAAAABCAAoAAQABAAUAAABCAAkAAQABAAEAAABBAAoAAQABAAUAAABBAAkAAQABAAAAAABAAAoAAQABAAUAAABAAAkAAQABAAAAAAA/AAoAAQABAAUAAAA/AAkAAQABAAAAAAA+AAoAAQABAAUAAAA+AAkAAQABAAAAAAA9AAoAAQABAAUAAAA9AAkAAQABAAAAAAA8AAoAAQABAAUAAAA8AAkAAQABAAAAAAA7AAoAAQABAAUAAAA7AAkAAQABAAAAAAA6AAoAAQABAAUAAAA6AAkAAQABAAAAAAA5AAoAAQABAAUAAAA5AAkAAQABAAAAAAA4AAoAAQABAAUAAAA4AAkAAQABAAAAAAA3AAoAAQABAAUAAAA3AAkAAQABAAAAAAA2AAoAAQABAAUAAAA2AAkAAQABAAAAAAA1AAoAAQABAAUAAAA1AAkAAQABAAAAAAA0AAoAAQABAAUAAAA0AAkAAQABAAAAAAAzAAoAAQABAAUAAAAzAAkAAQABAAAAAAAyAAoAAQABAAUAAAAyAAkAAQABAAAAAAAxAAoAAQABAAUAAAAxAAkAAQABAAAAAAAwAAoAAQABAAUAAAAwAAkAAQABAAAAAAAvAAoAAQABAAUAAAAvAAkAAQABAAAAAAAuAAoAAQABAAUAAAAuAAkAAQABAAAAAAAtAAoAAQABAAUAAAAtAAkAAQABAAAAAAAsAAoAAQABAAUAAAAsAAkAAQABAAAAAAArAAoAAQABAAUAAAArAAkAAQABAAAAAAAqAAoAAQABAAUAAAAqAAkAAQABAAAAAABDAAoAAQAFAAUAAABDAAkAAQAFAAEAAABDAAgAAQAFAAEAAABDAAcAAQAFAAEAAABDAAYAAQAFAAEAAABDAAUAAQAFAAEAAABDAAQAAQAFAAEAAABDAAMAAQAFAAEAAABDAAIAAQAFAAEAAABDAAEAAQAFAAEAAABDAAAAAQAFAAAAAABCAAgAAQABAAEAAABCAAcAAQABAAEAAABCAAYAAQABAAEAAABCAAUAAQABAAEAAABCAAQAAQABAAEAAABCAAMAAQABAAEAAABCAAIAAQABAAEAAABCAAEAAQABAAEAAABCAAAAAQABAAAAAAA=")
tile_set = SubResource("TileSet_m5l5b")

[node name="PlayerMarker" type="Marker2D" parent="."]
position = Vector2(147, 124)

[node name="EnemyMarker" type="Marker2D" parent="."]
position = Vector2(389, 125)

[node name="StateMachine" parent="." instance=ExtResource("5_4vifh")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BattleEnemy" parent="CanvasLayer" instance=ExtResource("6_70u4w")]
visible = false
offset_top = -60.0

[node name="BattlePlayer" parent="CanvasLayer" instance=ExtResource("5_0ktgf")]
visible = false
offset_top = -60.0

[node name="ComputeInput" parent="CanvasLayer" instance=ExtResource("6_veeoo")]
visible = false
